# Rechteckspackung

./: .gitignore  CMakeLists.txt  README.md  bitmap.cpp  bitmap.h  common.h  input_parser.cpp  input_parser.h  list_wrapper.cpp  list_wrapper.h  main.cpp  min_cost_flow.cpp  min_cost_flow.h  net.cpp  net.h  pack_inst_10  pack_inst_15  pack_inst_16  pack_inst_18  pack_inst_20  pack_inst_3  pack_inst_4  pack_inst_5  pack_inst_6  packing.cpp  packing.h  placement_iterator.cpp  placement_iterator.h  rectangle.cpp  rectangle.h  sequence_pair.cpp  sequence_pair.h  sol6  sol_21  sweepline.cpp  testnet  vorstellung.tex
Instances/: pack_inst_1  pack_inst_11  pack_inst_12  pack_inst_13  pack_inst_14  pack_inst_17  pack_inst_19  pack_inst_2  pack_inst_21  pack_inst_7  pack_inst_8  pack_inst_9
Instances/Solutions/: sol6a  sol_18  sol_19  sol_20
